# erp-projeto

./: .dockerignore  .gitignore  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: cli.py  main.py
backend/app/core/: config.py  database.py  observability.py  passwords.py  permissions.py  security.py  tokens.py
backend/app/models/: __init__.py  auth.py  finance.py  fiscal.py  inventory.py  purchase.py  sales.py  tenant.py
backend/app/routers/: auth.py  finance.py  fiscal.py  inventory.py  migration.py  purchase.py  reporting.py  sales.py
backend/app/services/: analytics_service.py  auth_service.py  finance_service.py  fiscal_apuracao_service.py  fiscal_emission.py  inventory_service.py  migration_service.py  nfe_import_service.py  outbox_service.py  purchase_service.py  reconciliation_service.py  reporting_service.py  sales_service.py  tenant_purge_service.py
backend/migrations/: env.py
backend/migrations/versions/: .gitkeep  4ae04b6cedd6_fix_immutability_trigger_return_new_on_.py  a0ff922b205d_baseline_schema.py  a5cc2723e0b0_row_level_security_tenant_isolation.py  b1c3f7a9e2d5_fase_b_contabilidade_real.py  c7f3a1b29d84_add_organization_id_to_stock_moves.py  d4b8e1c3f607_fiscal_document_taxes_apuracao_rtc.py  e3f9a2c8b614_inventory_lot_serial_tracking.py  f5a1d2c9b730_bank_reconciliation_match_link.py
backend/tests/: test_analytics_service.py  test_finance_service.py  test_fiscal_apuracao.py  test_fiscal_determination.py  test_fiscal_emission.py  test_fiscal_integration.py  test_integration_rls_triggers.py  test_inventory_lot_serial.py  test_inventory_service.py  test_nfe_parse.py  test_outbox_service.py  test_reconciliation_service.py  test_reporting_and_migration.py  test_router.py
docs/: README.md
docs/contracts/: README.md
docs/schemas/: README.md  v1_schema_draft.sql
fiscal-engine/: README.md  pyproject.toml
fiscal-engine/fiscal_engine/: __init__.py  calculations.py  certificates.py  determination.py  emission.py  nfe.py  nfse.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Card.tsx
frontend/src/lib/: api.ts
frontend/src/store/: authStore.ts
infra/: README.md
infra/terraform/: main.tf  outputs.tf  variables.tf
integrations/: README.md  __init__.py
integrations/banking/: __init__.py  open_finance.py  pix_slip_gateway.py  webhook_receiver.py
