[tool.poetry]
name = "erp-v-backend"
version = "0.1.0"
description = "ERP-V Monorepo Backend Service"
authors = ["Vinicius Souza <vinicius@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.49"}
alembic = "^1.13.1"
asyncpg = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "^2.5.2"
redis = "^5.1.1"
"fiscal-engine" = { path = "../fiscal-engine", develop = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
mypy = "^1.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "ERA", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["migrations"]
