[tool.poetry]
name = "erp-v-backend"
version = "0.1.0"
description = "ERP-V Monorepo Backend Service"
authors = ["Vinicius Souza <vinicius@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.49"}
alembic = "^1.13.1"
asyncpg = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.13.4"}
pydantic-settings = "^2.5.2"
redis = "^5.1.1"
"fiscal-engine" = { path = "../fiscal-engine", develop = true }
pyjwt = "^2.9.0"
argon2-cffi = "^23.1.0"
# A3 — Observabilidade
opentelemetry-api = ">=1.24.0,<2.0.0"
opentelemetry-sdk = ">=1.24.0,<2.0.0"
opentelemetry-instrumentation-fastapi = {version = ">=0.45b0", allow-prereleases = true}
opentelemetry-instrumentation-sqlalchemy = {version = ">=0.45b0", allow-prereleases = true}
opentelemetry-exporter-otlp-proto-http = ">=1.24.0,<2.0.0"
sentry-sdk = {extras = ["fastapi"], version = ">=2.0.0,<3.0.0"}
structlog = ">=24.0.0,<26.0.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
mypy = "^1.10.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
aiosqlite = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: exige PostgreSQL real (RLS, triggers) — requer a env TEST_PG_DSN",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20", "RET", "SIM", "ARG", "ERA", "RUF"]
# N818: the codebase consistently names domain errors ``*Exception`` (a valid convention).
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert, fixture args, sample secrets and long literals.
"tests/**" = ["S101", "S105", "S106", "E402", "E501", "ARG001", "ARG002", "ERA001"]
# Alembic migrations are generated/large and not held to app line limits.
"migrations/**" = ["E501", "E402", "F401"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are designed to be called in defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Cookie",
    "app.core.security.require_permission",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["migrations"]

# Tests are not held to strict typing (fixtures, parametrization, etc.).
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_any_generics = false
check_untyped_defs = false
