[tool.poetry]
name = "fiscal-engine"
version = "0.1.0"
description = "Fiscal Engine for Brazilian Tax calculations and documents"
authors = ["Vinicius Souza <vinicius@example.com>"]
readme = "README.md"
packages = [{include = "fiscal_engine"}]

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
